...
        android:layout_centerInParent="true"
        android:text="@string/noResultsFound"
        android:textColor="@color/black"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/locationStatusLabel"
        android:layout_width="327dp"
        android:layout_height="39dp"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="189dp"
...
